--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+}
 body{
   background-color: #95b7c0;
   padding: 0;
@@ -266,4 +271,42 @@ body{
   height: 150px;
   background-color: #fde7b6;
   z-index: -1;
+}
+.container{
+  text-align: center;
+  position: absolute;
+  top: 450px;
+  left: 480px;
+  transition: translate(450px, 480px);
+  width: 100%
+}
+.container span{
+  color: white;
+  text-transform: uppercase;
+  display: block;
+}
+.text{
+  font-size: 40px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  margin-bottom: 20px;
+  background: #95b7c0;
+  position: absolute;
+  animation: text 3s 1;
+}
+
+@@keyframes text {
+  0%{
+    color: #95b7c0;
+    margin-bottom: -40px;
+  }
+  30%{
+    letter-spacing: 25px;
+    margin-bottom: -40px;
+  }
+  85%{
+    letter-spacing: 8px;
+    margin-bottom: -40px;
+  }
+  }
 }
