--- a/mystyle.css
+++ b/mystyle.css
@@ -291,16 +291,18 @@ h1{
   animation-play-state: inherit;
   animation-iteration-count: infinite;
 }
-.content:hover {
-  animation-play-state: running;
+.wrapper:hover {
+  height: 120px;
+  width: 360px;
+  background-color: #95b7c0;
+  animation-name: spin;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  text-align: center;
 }
-
-@@keyframes moving-words {
-  0% {left:698px;}
-  5% {left:798px;}
-  30% {left:798px;}
-  35% {left:398px;}
-  60% {left:398px;}
-  65% {left:698px;}
-  100% {left:698px;}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
